Responsive fixes: Job posting sidebar spacing.

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -218,4 +218,5 @@
 
 .story-sidebar {
     grid-column: 1/4;
+    margin-bottom: var(--space-6);
 }
